# open-mushi

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  dprint.json  eslint.config.js  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  turbo.json
.cargo/: config.toml
crates/aec/: .gitignore  Cargo.toml
crates/aec/benches/: aec_bench.rs
crates/aec/data/snapshots/: doubletalk_128_batch.json  doubletalk_128_streaming.json  doubletalk_256_batch.json  doubletalk_256_streaming.json  doubletalk_512_batch.json  doubletalk_512_streaming.json  hyprnote_128_batch.json  hyprnote_128_streaming.json  hyprnote_256_batch.json  hyprnote_256_streaming.json  hyprnote_512_batch.json  hyprnote_512_streaming.json  theo_128_batch.json  theo_128_streaming.json  theo_256_batch.json  theo_256_streaming.json  theo_512_batch.json  theo_512_streaming.json
crates/aec/src/: error.rs  lib.rs
crates/aec/src/onnx/: mod.rs  model.rs
crates/am/: Cargo.toml
crates/am/src/: client.rs  error.rs  lib.rs  model.rs  types.rs
crates/api-client/: Cargo.toml
crates/api-client/src/: lib.rs  types.rs
crates/audio/: Cargo.toml
crates/audio-device/: Cargo.toml
crates/audio-device/src/: device.rs  error.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/audio/src/: lib.rs  mic.rs  norm.rs
crates/audio/src/speaker/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
crates/bundle/: Cargo.toml
crates/bundle/src/: bundle.rs  lib.rs  proc.rs
crates/cactus/: Cargo.toml
crates/cactus/src/: lib.rs
crates/db-parser/: Cargo.toml
crates/db-parser/src/: error.rs  lib.rs  types.rs
crates/db-parser/src/v0/: convert.rs  mod.rs
crates/db-parser/src/v1/: cell.rs  mod.rs  parsers.rs  types.rs
crates/db-user/: AGENTS.md  Cargo.toml
crates/db-user/src/: calendars_ops.rs  calendars_types.rs  config_ops.rs  config_types.rs  events_ops.rs  extensions_ops.rs  humans_ops.rs  humans_types.rs  lib.rs  organizations_ops.rs  sessions_ops.rs  sessions_types.rs  tags_ops.rs  templates_ops.rs
crates/denoise/: Cargo.toml
crates/denoise/benches/: denoise_bench.rs
crates/denoise/data/snapshots/: english_1_batch.json  english_1_streaming.json
crates/denoise/src/: lib.rs
crates/denoise/src/onnx/: buffer.rs  context.rs  denoiser.rs  error.rs  mod.rs  model.rs  tests.rs
crates/device-monitor/: Cargo.toml
crates/device-monitor/src/: debounce.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/file/: Cargo.toml
crates/file/src/: lib.rs  remote.rs
crates/google-drive/: Cargo.toml
crates/google-drive/src/: client.rs  lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: config.rs  error.rs  event.rs  lib.rs  naming.rs  runner.rs
crates/intercept/: Cargo.toml  README.md  build.rs
crates/intercept/examples/: test_force_quit.rs
crates/intercept/src/: lib.rs
crates/intercept/swift-lib/: Package.swift
crates/intercept/swift-lib/src/: EntryPoint.swift  QuitInterceptor.swift  QuitOverlayConfig.swift  QuitOverlayPanel.swift
crates/jina/: Cargo.toml
crates/jina/src/: client.rs  error.rs  lib.rs  reader.rs  search.rs  types.rs
crates/language/: Cargo.toml
crates/language/src/: detect.rs  error.rs  lib.rs  whisper.rs
crates/listener-core/: Cargo.toml
crates/listener-core/examples/: cli.rs
crates/listener-core/src/: events.rs  lib.rs  runtime.rs
crates/listener-core/src/actors/: mod.rs  root.rs
crates/listener-core/src/actors/listener/: adapters.rs  mod.rs  stream.rs
crates/listener-core/src/actors/recorder/: codec.rs  mod.rs
crates/listener-core/src/actors/session/: lifecycle.rs  mod.rs  supervisor.rs  types.rs
crates/llm-proxy/: Cargo.toml
crates/llm-proxy/src/: analytics.rs  config.rs  env.rs  lib.rs  model.rs  openapi.rs  types.rs
crates/llm-proxy/src/handler/: mod.rs  non_streaming.rs  streaming.rs
crates/llm-proxy/src/provider/: mod.rs  openrouter.rs
crates/llm-proxy/tests/: proxy_e2e.rs  replay.rs
crates/llm-proxy/tests/common/: analytics.rs  harness.rs  mod.rs
crates/local-llm-core/: Cargo.toml
crates/local-llm-core/src/: error.rs  lib.rs  model.rs  server.rs  store.rs
crates/mac/: Cargo.toml
crates/mac/src/: lib.rs
crates/model-downloader/: Cargo.toml
crates/model-downloader/src/: archive.rs  download_paths.rs  download_task_progress.rs  downloads_registry.rs  error.rs  lib.rs  manager.rs  model.rs  runtime.rs  task_join.rs
crates/model-downloader/src/download_task/: failure.rs  mod.rs  params.rs  steps.rs
crates/model-downloader/tests/: archive.rs  manager.rs
crates/notification/: Cargo.toml
crates/notification-linux/: AGENTS.md  Cargo.toml
crates/notification-linux/examples/: test_notification.rs
crates/notification-linux/src/: impl.rs  lib.rs  ui.rs
crates/notification-macos/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/notification-macos/examples/: test_notification_with_event.rs  test_notification_with_options.rs  test_notification_without_event.rs
crates/notification-macos/examples/common/: mod.rs
crates/notification-macos/src/: lib.rs
crates/notification-macos/swift-lib/: Package.swift
crates/notification-macos/swift-lib/src/: Constants.swift  Models.swift  NotificationButtons.swift  NotificationInstance.swift  NotificationManager+Animation.swift  NotificationManager+CompactView.swift  NotificationManager+Creation.swift  NotificationManager+ExpandedView.swift  NotificationManager+Layout.swift  NotificationManager+Lifecycle.swift  NotificationManager+MouseTracking.swift  NotificationManager.swift  NotificationViews.swift  RustBridge.swift  lib.swift
crates/notification/src/: lib.rs
crates/openrouter/: Cargo.toml
crates/openrouter/src/: client.rs  error.rs  lib.rs
crates/openrouter/src/types/: content.rs  message.rs  mod.rs  provider.rs  request.rs  response.rs  responses.rs
crates/outlook-calendar/: Cargo.toml
crates/outlook-calendar/src/: client.rs  lib.rs  openapi.rs  types.rs
crates/owhisper-client/: Cargo.toml
crates/owhisper-client/src/: lib.rs
crates/owhisper-interface/: Cargo.toml
crates/owhisper-interface/src/: batch.rs  lib.rs  openapi.rs  progress.rs
(+1542 files in other folders)
