[package]
name = "aec"
version = "0.1.0"
edition = "2024"

[features]
default = ["onnx", "128"]
onnx = ["dep:openmushi-onnx"]
128 = []
256 = []
512 = []

[dependencies]
openmushi-onnx = { workspace = true, optional = true }

realfft = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
dasp = { workspace = true }
hound = { workspace = true }
openmushi-audio-snapshot = { workspace = true }
rodio = { workspace = true }

[[bench]]
name = "aec_bench"
harness = false
