[package]
name = "cactus"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
openmushi-llm-types = { workspace = true }
tower = { workspace = true, features = ["util"] }

futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
