[package]
name = "db-user"
version = "0.1.0"
edition = "2024"

[dependencies]
openmushi-buffer = { workspace = true }
openmushi-db-core = { workspace = true }
openmushi-language = { workspace = true }
owhisper-interface = { workspace = true }

libsql = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }

schemars = { workspace = true, features = ["chrono04"] }
specta = { workspace = true, features = ["derive", "chrono", "serde_json"] }

chrono = { workspace = true, features = ["serde"] }
indoc = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
