[package]
name = "denoise"
version = "0.1.0"
edition = "2024"

[features]
default = []
onnx = ["dep:openmushi-onnx", "dep:realfft"]
coreml = ["onnx", "openmushi-onnx/coreml"]

[dependencies]
openmushi-onnx = { workspace = true, optional = true }
realfft = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
dasp = { workspace = true }
hound = { workspace = true }
openmushi-audio-snapshot = { workspace = true }
openmushi-data = { workspace = true }
rodio = { workspace = true }

[[bench]]
name = "denoise_bench"
harness = false
required-features = ["onnx"]
