[package]
name = "file"
version = "0.1.0"
edition = "2024"

[dependencies]
openmushi-download-interface = { workspace = true }

base64 = { workspace = true }
crc32fast = "1.4.2"
thiserror = { workspace = true }

futures-util = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "stream"] }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tokio-util = "0.7"
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
