[package]
name = "hooks"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
specta = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
