[package]
name = "listener-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
specta = ["dep:specta"]
tauri-event = ["specta", "dep:tauri-specta"]

[dependencies]
openmushi-aec = { workspace = true }
openmushi-audio = { workspace = true }
openmushi-audio-utils = { workspace = true }
openmushi-device-monitor = { workspace = true }
openmushi-host = { workspace = true }
openmushi-language = { workspace = true }
openmushi-storage = { workspace = true }
openmushi-supervisor = { workspace = true }
openmushi-transcript = { workspace = true }
openmushi-vad-masking = { workspace = true }
owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }
openmushi-stt-sherpa = { workspace = true }

hound = { workspace = true }
openmushi-mp3 = { workspace = true }
vorbis_rs = { workspace = true }

ractor = { workspace = true, features = ["async-trait"] }

bytes = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, optional = true }
tauri-specta = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
