[package]
name = "local-llm-core"
version = "0.1.0"
edition = "2024"

[features]
specta = ["dep:specta"]

[dependencies]
openmushi-cactus = { workspace = true }
openmushi-file = { workspace = true }
openmushi-gguf = { workspace = true }
openmushi-lmstudio = { workspace = true }

axum = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }

specta = { workspace = true, optional = true }

