[package]
name = "owhisper-client"
version = "0.0.1"
edition = "2024"

[dependencies]
openmushi-cactus-model = { workspace = true }
openmushi-language = { workspace = true }
openmushi-ws-client = { workspace = true }
owhisper-interface = { workspace = true }

bytes = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }
