[package]
name = "owhisper-interface"
version = "0.1.0"
edition = "2024"

[features]
openapi = ["dep:utoipa"]

[dev-dependencies]
deepgram = { workspace = true, default-features = false, features = ["listen"] }

[dependencies]
openmushi-language = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true, features = ["serde"] }
codes-iso-639 = { workspace = true }
schemars = { workspace = true }
specta = { workspace = true, features = ["derive", "serde_json"] }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }
